--- a/src/components/ingredient-item/ingredient-item.module.css
+++ b/src/components/ingredient-item/ingredient-item.module.css
@@ -1,4 +1,11 @@
 .listItem {
     width: 272px;
     height: 208px;
+    position: relative;
+    text-align: center;
+}
+
+.priceItem {
+    display: flex;
+    justify-content: center;
 }
