--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -8,7 +8,7 @@
     margin-top: 40px;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 40px;
+    position: relative;
 }
 
 .content {
@@ -16,12 +16,14 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 .list {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     list-style: none;
 }
 
@@ -30,5 +32,9 @@
 }
 
 .logo {
-    list-style: none;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
 }
+
